force-app/main/default/objects/opa_company__c/opa_company__c.object-meta.xml
<CustomObject>
    <label>opa_company</label>
    <nameField>
        <label>opa_company</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>opa_companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>