force-app/main/default/objects/opa_company__c/fields/afgesproken_betaaltermijn__c.field-meta.xml
<CustomField>
    <fullName>afgesproken_betaaltermijn__c</fullName>
    <label>afgesproken_betaaltermijn</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>