force-app/main/default/objects/opa_company__c/fields/bedrijf_naam__c.field-meta.xml
<CustomField>
    <fullName>bedrijf_naam__c</fullName>
    <label>bedrijf_naam</label>
    <length>255</length>
    <type>Text</type>
</CustomField>