force-app/main/default/objects/opa_company__c/fields/bezoek_adres__c.field-meta.xml
<CustomField>
    <fullName>bezoek_adres__c</fullName>
    <label>bezoek_adres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>