force-app/main/default/objects/opa_company__c/fields/corporate_culture__c.field-meta.xml
<CustomField>
    <fullName>corporate_culture__c</fullName>
    <label>corporate_culture</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>