force-app/main/default/objects/opa_company__c/fields/credit_graydon_check__c.field-meta.xml
<CustomField>
    <fullName>credit_graydon_check__c</fullName>
    <label>credit_graydon_check</label>
    <length>255</length>
    <type>Text</type>
</CustomField>