force-app/main/default/objects/opa_company__c/fields/creditcheck_anders_type__c.field-meta.xml
<CustomField>
    <fullName>creditcheck_anders_type__c</fullName>
    <label>creditcheck_anders_type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>