force-app/main/default/objects/opa_company__c/fields/creditcheck_bedrag_akkoord__c.field-meta.xml
<CustomField>
    <fullName>creditcheck_bedrag_akkoord__c</fullName>
    <label>creditcheck_bedrag_akkoord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>