force-app/main/default/objects/opa_company__c/fields/creditcheck_status__c.field-meta.xml
<CustomField>
    <fullName>creditcheck_status__c</fullName>
    <label>creditcheck_status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>