force-app/main/default/objects/opa_company__c/fields/customers_competitors__c.field-meta.xml
<CustomField>
    <fullName>customers_competitors__c</fullName>
    <label>customers_competitors</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>