force-app/main/default/objects/opa_company__c/fields/email_adres_herinneringen__c.field-meta.xml
<CustomField>
    <fullName>email_adres_herinneringen__c</fullName>
    <label>email_adres_herinneringen</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>