force-app/main/default/objects/opa_company__c/fields/facts_figures__c.field-meta.xml
<CustomField>
    <fullName>facts_figures__c</fullName>
    <label>facts_figures</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>