force-app/main/default/objects/opa_company__c/fields/facturatie_tav__c.field-meta.xml
<CustomField>
    <fullName>facturatie_tav__c</fullName>
    <label>facturatie_tav</label>
    <length>255</length>
    <type>Text</type>
</CustomField>