force-app/main/default/objects/opa_company__c/fields/factuur_gem_betaaltermijn__c.field-meta.xml
<CustomField>
    <fullName>factuur_gem_betaaltermijn__c</fullName>
    <label>factuur_gem_betaaltermijn</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>