force-app/main/default/objects/opa_company__c/fields/is_blockmailshot__c.field-meta.xml
<CustomField>
    <fullName>is_blockmailshot__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_blockmailshot</label>
    <type>Checkbox</type>
</CustomField>