force-app/main/default/objects/opa_company__c/fields/is_freelancer__c.field-meta.xml
<CustomField>
    <fullName>is_freelancer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_freelancer</label>
    <type>Checkbox</type>
</CustomField>