force-app/main/default/objects/opa_company__c/fields/is_imported__c.field-meta.xml
<CustomField>
    <fullName>is_imported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_imported</label>
    <type>Checkbox</type>
</CustomField>