force-app/main/default/objects/opa_company__c/fields/is_perm__c.field-meta.xml
<CustomField>
    <fullName>is_perm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_perm</label>
    <type>Checkbox</type>
</CustomField>