force-app/main/default/objects/opa_company__c/fields/is_target_accounts__c.field-meta.xml
<CustomField>
    <fullName>is_target_accounts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_target_accounts</label>
    <type>Checkbox</type>
</CustomField>