force-app/main/default/objects/opa_company__c/fields/is_temp__c.field-meta.xml
<CustomField>
    <fullName>is_temp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_temp</label>
    <type>Checkbox</type>
</CustomField>