force-app/main/default/objects/opa_company__c/fields/is_top_hundred__c.field-meta.xml
<CustomField>
    <fullName>is_top_hundred__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is_top_hundred</label>
    <type>Checkbox</type>
</CustomField>