force-app/main/default/objects/opa_company__c/fields/kvknummer__c.field-meta.xml
<CustomField>
    <fullName>kvknummer__c</fullName>
    <label>kvknummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>