force-app/main/default/objects/opa_company__c/fields/LegacyOpaID_Company__c.field-meta.xml
<CustomField>
    <fullName>LegacyOpaID_Company__c</fullName>
    <label>LegacyOpaID__Company</label>
    <length>255</length>
    <type>Text</type>
</CustomField>