force-app/main/default/objects/opa_company__c/fields/memo__c.field-meta.xml
<CustomField>
    <fullName>memo__c</fullName>
    <label>memo</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>