force-app/main/default/objects/opa_company__c/fields/mobile_phone__c.field-meta.xml
<CustomField>
    <fullName>mobile_phone__c</fullName>
    <label>mobile_phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>