force-app/main/default/objects/opa_company__c/fields/plaats_ba__c.field-meta.xml
<CustomField>
    <fullName>plaats_ba__c</fullName>
    <label>plaats_ba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>