force-app/main/default/objects/opa_company__c/fields/post_adres__c.field-meta.xml
<CustomField>
    <fullName>post_adres__c</fullName>
    <label>post_adres</label>
    <length>255</length>
    <type>Text</type>
</CustomField>