force-app/main/default/objects/opa_company__c/fields/postcode_ba__c.field-meta.xml
<CustomField>
    <fullName>postcode_ba__c</fullName>
    <label>postcode_ba</label>
    <length>255</length>
    <type>Text</type>
</CustomField>