force-app/main/default/objects/opa_company__c/fields/rechtsvorm__c.field-meta.xml
<CustomField>
    <fullName>rechtsvorm__c</fullName>
    <label>rechtsvorm</label>
    <length>255</length>
    <type>Text</type>
</CustomField>