force-app/main/default/objects/opa_company__c/fields/rekeningnummer__c.field-meta.xml
<CustomField>
    <fullName>rekeningnummer__c</fullName>
    <label>rekeningnummer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>