force-app/main/default/objects/opa_company__c/fields/true_freelancer__c.field-meta.xml
<CustomField>
    <fullName>true_freelancer__c</fullName>
    <label>true_freelancer</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>