force-app/main/default/objects/opa_company__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LegacyOpaID_Company__c</columns>
    <columns>bedrijf_naam__c</columns>
    <columns>email__c</columns>
    <columns>kvknummer__c</columns>
    <columns>rekeningnummer__c</columns>
    <columns>phone__c</columns>
    <columns>mobile_phone__c</columns>
    <columns>website__c</columns>
    <columns>postcode__c</columns>
    <columns>post_adres__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>